tests/lean/bad_error3.lean
example (p : nat → nat → Prop) : p 0 :=
begin
end

def ex (p : nat → nat → Prop) : p 0 :=
begin
end
